@@ -1,0 +1,96 @@
+/*
+ * Copyright 2011 the original author or authors.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *        http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
+package com.jayway.restassured.itest.java;
+
+import com.jayway.restassured.RestAssured;
+import com.jayway.restassured.itest.java.support.WithJetty;
+import org.junit.Test;
+
+import static com.jayway.restassured.RestAssured.*;
+
+public class AuthenticationITest extends WithJetty {
+
+    @Test
+    public void basicAuthentication() throws Exception {
+        given().auth().basic("jetty", "jetty").expect().statusCode(200).when().get("/secured/hello");
+    }
+
+    @Test
+    public void basicAuthenticationWithBasePath() throws Exception {
+        RestAssured.basePath = "/secured/hello";
+        try {
+            given().auth().basic("jetty", "jetty").expect().statusCode(200).when().get("");
+        } finally {
+            RestAssured.reset();
+        }
+    }
+
+    @Test
+    public void basicAuthenticationUsingDefault() throws Exception {
+        authentication = basic("jetty", "jetty");
+        try {
+            expect().statusCode(200).when().get("/secured/hello");
+        } finally {
+            RestAssured.reset();
+        }
+    }
+
+    @Test
+    public void explicitExcludeOfBasicAuthenticationWhenUsingDefault() throws Exception {
+        authentication = basic("jetty", "jetty");
+        try {
+            given().auth().none().and().expect().statusCode(401).when().get("/secured/hello");
+        } finally {
+            RestAssured.reset();
+        }
+    }
+
+    @Test
+    public void supportsExpectingStatusCodeWhenAuthenticationError() throws Exception {
+        given().auth().basic("abcd", "abCD1").expect().statusCode(401).when().get("/secured/hello");
+    }
+
+    @Test
+    public void supportsPreemptiveBasicAuthentication() throws Exception {
+        given().auth().preemptive().basic("jetty", "jetty").expect().statusCode(200).when().get("/secured/hello");
+    }
+
+    @Test
+    public void supportsExpectingStatusCodeWhenPreemptiveBasicAuthenticationError() throws Exception {
+        given().auth().preemptive().basic("jetty", "bad password").expect().statusCode(401).when().get("/secured/hello");
+    }
+
+    @Test
+    public void preemptiveBasicAuthenticationUsingDefault() throws Exception {
+        authentication = preemptive().basic("jetty", "jetty");
+        try {
+            expect().statusCode(200).when().get("/secured/hello");
+        } finally {
+            RestAssured.reset();
+        }
+    }
+
+    @Test
+      public void explicitExcludeOfPreemptiveBasicAuthenticationWhenUsingDefault() throws Exception {
+          authentication = preemptive().basic("jetty", "jetty");
+          try {
+              given().auth().none().and().expect().statusCode(401).when().get("/secured/hello");
+          } finally {
+              RestAssured.reset();
+          }
+      }
+}
