@@ -25,7 +25,7 @@ class BasicAuthScheme implements AuthenticationScheme {
   def String userName
   def String password
 
-  @Override def authenticate(HTTPBuilder httpBuilder) {
-    return httpBuilder.auth.basic(userName, password)
+  @Override void authenticate(HTTPBuilder httpBuilder) {
+     httpBuilder.auth.basic(userName, password)
   }
 }
