@@ -24,7 +24,7 @@ class OAuthScheme implements AuthenticationScheme {
   def String accessToken
   def String secretToken
 
-  @Override def authenticate(HTTPBuilder httpBuilder) {
-    return httpBuilder.auth.oauth(consumerKey, consumerSecret, accessToken, secretToken)
+  @Override void authenticate(HTTPBuilder httpBuilder) {
+    httpBuilder.auth.oauth(consumerKey, consumerSecret, accessToken, secretToken)
   }
 }
