@@ -1,0 +1,36 @@
+/*
+ * Copyright 2011 the original author or authors.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *        http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
+package com.jayway.restassured.authentication;
+
+public class PreemptiveAuthProvider {
+    /**
+     * Use preemptive http basic authentication. This means that the authentication details are sent in the request
+     * header regardless if the server has challenged for authentication or not.
+     *
+     * @param userName The user name.
+     * @param password The password.
+     *
+     * @return The Request specification
+     */
+    public AuthenticationScheme basic(String userName, String password) {
+        final PreemptiveBasicAuthScheme preemptiveBasicAuthScheme = new PreemptiveBasicAuthScheme();
+        preemptiveBasicAuthScheme.setUserName(userName);
+        preemptiveBasicAuthScheme.setPassword(password);
+        return preemptiveBasicAuthScheme;
+    }
+
+}
